--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-    
-
+   
     <title>Train Scheduler</title>
 </head>
 <body>
@@ -26,7 +24,7 @@
                 
                 <div class="card-header">Current Train Schedule</div>
                     <div class="card-body">
-                        <table class="table table-md table-hover" id="train-table">
+                        <table class="table table-md table-hover">
                             <thead>
                                 <tr>
                                     <th>Train Name</th>
@@ -36,7 +34,7 @@
                                     <th>Minutes Away</th>
                                 </tr>
                             </thead>
-                            <tbody></tbody>
+                            <tbody id="tbody"></tbody>
                         </table>
                     </div>
             </div>  
@@ -81,5 +79,6 @@
     <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </body>
 </html>
