--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
                 <div class="card-header">Current Train Schedule</div>
                     <div class="card-body">
-                        <table class="table table-md table-hover">
+                        <table class="table">
                             <thead>
                                 <tr>
                                     <th>Train Name</th>
@@ -70,6 +70,7 @@
                     </div>
 
                     <button class="btn btn-primary float-right" id="submit-btn">Submit</button>
+            
                 </form>
             </div>
         </div>
