--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="first-input">First Train Time (HH:mm - military time)</label>
+                        <label for="first-input">First Train Time (HH:mm - 24Hrs.)</label>
                         <input class="form-control" id="first-input" type="text">
                     </div>
 
