--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Train Name</th>
+                                    <th>Train</th>
                                     <th>Destination</th>
                                     <th>Frequency</th>
-                                    <th>Next Arrival</th>
+                                    <th>Next Departure</th>
+                                    <th>Current Time</th>
                                     <th>Minutes Away</th>
                                 </tr>
                             </thead>
@@ -60,7 +61,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="first-input">First Train Time (HH:mm - 24Hrs.)</label>
+                        <label for="first-input">Departure Time (HH:mm - 24Hrs.)</label>
                         <input class="form-control" id="first-input" type="text">
                     </div>
 
