--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <input class="form-control" id="frequency-input" type="text">
                     </div>
 
-                    <button class="btn btn-primary float-right" id="submit-btn">Submit</button>
+                    <button class="btn btn-primary" id="submit-btn">Submit</button>
             
                 </form>
             </div>
